:art: Rename img folder to assets. Update resume

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta property="og:title" content="Jose Mario | Developer" />
   <meta property="og:type" content="image/jpeg" />
   <meta property="og:url" content="https://www.josemario.dev" />
-  <meta property="og:image" content="/img/graphTag.png" />
+  <meta property="og:image" content="/assets/graphTag.png" />
 
   <title>Jose Mario | Developer</title>
-  <link rel="shortcut icon" href="img/favicon.ico" />
+  <link rel="shortcut icon" href="assets/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
     integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
@@ -21,15 +21,15 @@
 
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="scss/main.css" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
 </head>
 
 <body>
   <div class="logo">
     <a href="#home">
-      <img src="img/rotated.png" alt="signature for josemariodev" />
+      <img src="assets/rotated.png" alt="signature for josemariodev" />
     </a>
   </div>
   <div class="menu-btn">
@@ -100,7 +100,7 @@
     <p class="section__subtitle section__subtitle--intro">
       Full-Stack Developer
     </p>
-    <img src="img/selfie-10.jpg" alt="Jose red selfie" class="intro__img" />
+    <img src="assets/selfie-10.jpg" alt="Jose red selfie" class="intro__img" />
   </section>
 
   <!-- My services -->
@@ -228,8 +228,7 @@
       </p>
     </div>
 
-    <img src="img/action.jpg" alt="Jose smiling" class="about-me__img" />
-    <!-- <img src="img/chicago.jpg" alt="Jose smiling" class="about-me__img" /> -->
+    <img src="assets/action.jpg" alt="Jose smiling" class="about-me__img" />
   </section>
 
   <!-- portfolio -->
@@ -241,7 +240,7 @@
     <div class="portfolio-items">
       <!-- Portfolio item 1 ReVitalize -->
       <div class="portfolio-item">
-        <img class="portfolio-image" src="img/projects/revitalize/revitalize-homepage.jpg" alt="portfolio item" />
+        <img class="portfolio-image" src="assets/projects/revitalize/revitalize-homepage.jpg" alt="portfolio item" />
         <figcaption>
           <h2 class="portfolio-title">ReVitalize</h2>
           <p class="portfolio-desc">
@@ -270,7 +269,7 @@
 
             </p>
 
-            <img src="img/projects/revitalize/revitalize-homepage.jpg" alt="" class="intro__img" />
+            <img src="assets/projects/revitalize/revitalize-homepage.jpg" alt="" class="intro__img" />
 
           </section>
           <!-- portfolio modal links -->
@@ -296,7 +295,7 @@
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
 
-              <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
+              <img src="assets/projects/revitalize/revitalize-walkthru1.gif" alt="" />
 
               <p class="portfolio-item__subheader">
                 Project Purpose
@@ -347,7 +346,7 @@
 
       <!-- Portfolio item 2 moviebase -->
       <div class="portfolio-item">
-        <img class="portfolio-image" src="img/projects/moviebase/moviebase2.png" alt="portfolio item" />
+        <img class="portfolio-image" src="assets/projects/moviebase/moviebase2.png" alt="portfolio item" />
         <figcaption>
           <h2 class="portfolio-title">Moviebase</h2>
           <p class="portfolio-desc">
@@ -373,7 +372,7 @@
               Explore. Discover. Remember.
             </p>
 
-            <img src="img/projects/moviebase/moviebase-homescreen.png" alt="" class="intro__img" />
+            <img src="assets/projects/moviebase/moviebase-homescreen.png" alt="" class="intro__img" />
           </section>
           <!-- portfolio modal links -->
           <div class="modal-links">
@@ -394,7 +393,7 @@
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
 
-              <img src="img/projects/moviebase/moviebase-walkthru.gif" alt="" />
+              <img src="assets/projects/moviebase/moviebase-walkthru.gif" alt="" />
 
               <p class="portfolio-item__subheader">
                 Project Purpose
@@ -437,7 +436,7 @@
 
       <!-- Portfolio item 3  Delicious -->
       <div class="portfolio-item">
-        <img class="portfolio-image" src="img/projects/slices/dang-homescreen.png" alt="portfolio item" />
+        <img class="portfolio-image" src="assets/projects/slices/dang-homescreen.png" alt="portfolio item" />
         <figcaption>
           <h2 class="portfolio-title">Now That's Delicious</h2>
           <p class="portfolio-desc">
@@ -463,7 +462,7 @@
               Good food, reviewed.
             </p>
 
-            <img src="img/projects/slices/dang-review.png" alt="" class="intro__img" />
+            <img src="assets/projects/slices/dang-review.png" alt="" class="intro__img" />
           </section>
 
           <!-- portfolio modal links -->
@@ -486,7 +485,7 @@
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
 
-              <img src="img/projects/slices/delicious-walkthru.gif" alt="" />
+              <img src="assets/projects/slices/delicious-walkthru.gif" alt="" />
 
               <p class="portfolio-item__subheader">
                 Project Purpose
