--- a/index.html
+++ b/index.html
@@ -276,15 +276,15 @@
           <div class="modal-links">
             <div class="modal-link ">
               <i class="fas fa-globe"></i>
-              <a class="styled__link" href="http://www.revitalize.community"
+              <a class="styled__link" href="https://revitalizecommunity.netlify.app/"
                 onclick="window.open(this.href); return false;"
-                onkeypress="window.open(this.href); return false;">www.revitalize.community</a>
+                onkeypress="window.open(this.href); return false;">revitalizecommunity.netlify.app</a>
             </div>
             <div class="modal-link">
               <i class="fab fa-github"></i>
               <a class="styled__link" href="http://www.github.com/Revitalized-Playground"
                 onclick="window.open(this.href); return false;"
-                onkeypress="window.open(this.href); return false;">www.github.com/playground</a>
+                onkeypress="window.open(this.href); return false;">www.github.com/revitalized-playground</a>
             </div>
           </div>
 
@@ -331,7 +331,7 @@
                 Working on ReVitalize was an amazing experience. It provided me with experience in a real world
                 environment building a complex
                 app that had an impact on communities. You can <a class="styled__link"
-                  href="http://www.revitalize.community" onclick="window.open(this.href); return false;"
+                  href="https://revitalizecommunity.netlify.app/" onclick="window.open(this.href); return false;"
                   onkeypress="window.open(this.href); return false;">experience</a> it for yourself. username: <span
                   class="credentials">
                   jose@gmail.com</span> password: <span class="credentials">password</span>
